[tool.poetry]
name = "hackernews"
version = "0.1.0"
description = ""
authors = ["Nordick-24 <bura23610@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.6.0"
Django = "^4.1.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
